--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,8 @@
 <body>
 	<div class="txt">
 		<h1>This is still in progress.</h1>
-		<a href="https://stress-relief-program.krishnakaushik1.repl.co/">Stress Relief Program</a>
+		<a href="https://stress-relief-program.krishnakaushik1.repl.co/" target="_blank">Stress Relief Program</a><br/>
+		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a>
 	</div>
 </body>
 </html>
