Added a 3D figure in projects.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 		<link rel="icon" href="person-imitation-small.jpg" />
   </head>
   <body>
-		<header>
-			<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="github-logo.png" alt="Follow me on GitHub" height="20px"></a>&nbsp
-			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px"></a>
-		</header>
     <div class="txt" align="center">
 			<h1>Hello! I am TheAwesomeKid02!</h1>
 			<h3>Here are facts about me.</h3>
@@ -32,6 +28,10 @@
 			<button id="btn">Submit</button><br/><br/>
 			<iframe src="https://discord.com/widget?id=768482861896433664&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 		</div><br/><br/><br/><br/><br/><br/><br/><br/>
-		<script src="script.js"></script>
+<script src="script.js"></script>
+<footer>
+			<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="github-logo.png" alt="Follow me on GitHub" height="20px"></a>&nbsp
+			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px"></a>
+		</footer>
   </body>
 </html>
