--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,10 @@
 	<div class="txt">
 		<h1>This is still in progress.</h1>
 		<a href="https://stress-relief-program.krishnakaushik1.repl.co/" target="_blank">Stress Relief Program</a><br/>
-		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a>
+		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a><br/><br/>
+		Another project I made (Don't look at this if your eyes can get dizzy easily)
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+		<script src="three-d.js"></script>
 	</div>
 </body>
 </html>
