improved stuff in general

--- a/index.html
+++ b/index.html
@@ -8,30 +8,36 @@
 		<link rel="icon" href="person-imitation-small.jpg" />
   </head>
   <body>
+		<header>
+			<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="github-logo.png" alt="Follow me on GitHub" height="20px" style="border-radius: 50px;"></a>
+			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px" style="border-radius: 50px;"></a>
+		</header>
     <div class="txt" align="center">
 			<h1>Hello! I am TheAwesomeKid02!</h1>
-			<h3>Here are facts about me.</h3>
+			<h2>Here are facts about me.</h2>
 			<div align="left">
-				<ul>
-					<li>My go-to language for simple websites is HTML along with CSS and sometimes JavaScript. For backend development, I mainly use node js, which I am still not perfect at :(
-					<li>I am working on a huge project using node js</li>
-					<li>I am learning more about node js along with three js and React three fiber</li>
+				<ul class="other_txt">
+					<li>My go-to language for simple websites is HTML along with CSS and sometimes JavaScript. For backend development, I mainly use node js, which I am still not perfect at 😥
+					<li>I am working on a huge project using Node JS 🧑‍💻</li>
+					<li>I am learning more about Node JS along with THREE JS and React Three Fiber</li>
+					<li>I am also learning Java 🍵</li>
+					<li>My Discord username is not TheAwesomeKid02 anymore, but you'll find it out once you join below 👇</li>
 				</ul>
 			</div>
-			<br/><br/><a href="projects.html">My other projects</a>
+			<br/>
+			<br/>
+			<a href="projects.html" id="alt_txt"><button id="new_pg_btn"><p style="color: white;">My other projects</p></button></a>
 			<br/><br/><br/><br/><br/><h2><u>Two facts and a fib</u></h2>
 			<h4>Which one is the fib/lie?</h4><br/>
-			<br/>(A) I have no siblings<br/>
-			(B) I have at least 5 years of HTML experience
-			<br/>(C) I lived in Canada for most of my life<br/><br/>
+			<div class="other_txt">
+				<br/>(A) I have no siblings<br/>
+				(B) I have at least 5 years of HTML experience
+				<br/>(C) I lived in Canada for most of my life<br/><br/>
+			</div>
 			<input type="text" placeholder="Letter of the answer" id="inp">
 			<button id="btn">Submit</button><br/><br/>
-			<iframe src="https://discord.com/widget?id=768482861896433664&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+			<iframe src="https://discord.com/widget?id=998260749447213170&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 		</div><br/><br/><br/><br/><br/><br/><br/><br/>
 <script src="script.js"></script>
-<footer>
-			<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="github-logo.png" alt="Follow me on GitHub" height="20px"></a>&nbsp
-			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px"></a>
-		</footer>
   </body>
 </html>
