--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px" style="border-radius: 50px;"></a>
 		</header>
     <div class="txt" align="center">
-			<h1>Hello! I am TheAwesomeKid02!</h1>
+			<img src="person-imitation-small.jpg" alt="me" id="me"><h1>Hello! I am TheAwesomeKid02!</h1>
 			<h2>Here are facts about me.</h2>
 			<div align="left">
 				<ul class="other_txt">
@@ -21,23 +21,13 @@
 					<li>I am working on a huge project using Node JS 🧑‍💻</li>
 					<li>I am learning more about Node JS along with THREE JS and React Three Fiber</li>
 					<li>I am also learning Java 🍵</li>
-					<li>My Discord username is not TheAwesomeKid02 anymore, but you'll find it out once you join below 👇</li>
+					<li>My Discord username is not TheAwesomeKid02 anymore, but you'll find it out once you click below 👇</li>
 				</ul>
 			</div>
 			<br/>
 			<br/>
-			<a href="projects.html" id="alt_txt"><button id="new_pg_btn"><p style="color: white;">My other projects</p></button></a>
-			<br/><br/><br/><br/><br/><h2><u>Two facts and a fib</u></h2>
-			<h4>Which one is the fib/lie?</h4><br/>
-			<div class="other_txt">
-				<br/>(A) I have no siblings<br/>
-				(B) I have at least 5 years of HTML experience
-				<br/>(C) I lived in Canada for most of my life<br/><br/>
-			</div>
-			<input type="text" placeholder="Letter of the answer" id="inp">
-			<button id="btn">Submit</button><br/><br/>
-			<iframe src="https://discord.com/widget?id=998260749447213170&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-		</div><br/><br/><br/><br/><br/><br/><br/><br/>
-<script src="script.js"></script>
+			<a href="projects.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">My other projects</p></button></a>
+			<a href="discord.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Discord Server</p></button></a>
+			<a href="facts-fib.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Two Facts and a Fib</p></button></a>
   </body>
 </html>
