major error in 2 facts and fib

--- a/facts-fib.html
+++ b/facts-fib.html
@@ -44,7 +44,7 @@
 		<h2><u>Two facts and a fib</u></h2>
 		<h4>Which one is the fib/lie?</h4>
 		<div id="small">
-			(A) I have no siblings<br/>
+			(A) I have an older brother<br/>
 			(B) I have at least 5 years of HTML experience
 			<br/>(C) I lived in Canada for most of my life<br/><br/>
 		</div>
