major updates in website

--- a/discord.html
+++ b/discord.html
@@ -20,7 +20,8 @@
 	</style>
 </head>
 <body>
-	<h1>Join my Land of Pigons Discord Server!</h1>
+	<a href="index.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Home</p></button></a><br/>
+	<h1>Join the Land of Pigons Discord Server!</h1>
 	<h2>We offer a fun and talkative community!</h2>
 	<iframe src="https://discord.com/widget?id=998260749447213170&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 	
