--- a/facts-fib.html
+++ b/facts-fib.html
@@ -40,6 +40,7 @@
 	</style>
 </head>
 <body>
+	<a href="index.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Home</p></button></a><br/>
 	<div class="other_txt">
 		<h2><u>Two facts and a fib</u></h2>
 		<h4>Which one is the fib/lie?</h4>
