--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,18 @@
 	<link rel="icon" href="person-imitation-small.jpg">
 </head>
 <body>
+	<header>
+		<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="github-logo.png" alt="Follow me on GitHub" height="20px" style="border-radius: 50px;"></a>
+		<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="replit-logo.png" alt="My replit account" height="20px" style="border-radius: 50px;"></a>
+	</header>
 	<div class="txt">
-		<h1>This is still in progress.</h1>
-		<a href="https://stress-relief-program.krishnakaushik1.repl.co/" target="_blank">Stress Relief Program</a><br/>
-		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a><br/><br/>
+		<a href="index.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Home</p></button></a>
+		<h1>Here are my projects!</h1>
+		<a href="https://stress-relief-program.theawesomekid02.repl.co/" target="_blank">Stress Relief Program</a><br/><p>This project may not work anymore.</p><br/>
+		<a href="https://Face-Emotion-API.theawesomekid02.repl.co" target="_blank">Face Emotion API</a><br/><p>This project uses your webcam, but it doesn't store any information. Check the source code for proof.</p>
+		<a href="https://donateplz.theawesomekid02.repl.co/" target="_blank">Donation Scam</a><br/><p>This is a scam donation site. Although it doesn't really store your information, please do NOT put real credentials.</p><br/>
+		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a><br/><p>A 3D scene with a reflective spherical surface in the center.</p><br/><br/>
+		<h2>Any additional projects can be found on my GitHub or Replit page. Click the icons at the top for more!</h2><br/><br/>
 		Another project I made (Don't look at this if your eyes can get dizzy easily)
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 		<script src="three-d.js"></script>
