changed other stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>All About TheAwesomeKid02</title>
+    <title>All About TheAwesomeKid</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 		<link rel="icon" href="images/person-imitation-small.jpg" />
   </head>
@@ -14,7 +14,7 @@
 			<img src="images/discord.png" alt="Discord Logo" height="20px" style="border-radius: 50px; border: none; "><p style="display: inline-block">TheAwesomeKid#7733</p>
 		</header>
     <div class="txt" align="center">
-			<img src="images/person-imitation-small.jpg" alt="me" id="me"><h1>Hello! I am TheAwesomeKid02!</h1>
+			<img src="images/person-imitation-small.jpg" alt="me" id="me"><h1>Hello! I am TheAwesomeKid!</h1>
 			<h2>Here are facts about me.</h2>
 			<div align="left">
 				<ul class="other_txt">
