--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TheAwesomeKid02 - Projects</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="person-imitation-small.jpg">
+	<title>TheAwesomeKid - Projects</title>
+	<link rel="stylesheet" href="projects.css">
+	<link rel="icon" href="images/person-imitation-small.jpg">
 </head>
 <body>
 	<header>
