--- a/discord.html
+++ b/discord.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Discord Server</title>
-	<link rel="icon" href="person-imitation-small.jpg">
+	<link rel="icon" href="images/person-imitation-small.jpg">
 	<link rel="stylesheet" href="style.css">
 	<style>
 		iframe {
