--- a/facts-fib.html
+++ b/facts-fib.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Two Facts and a Fib</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="person-imitation-small.jpg">
+	<link rel="icon" href="images/person-imitation-small.jpg">
 	<style>
 		#btn {
 			background: linear-gradient(blue, #7d7dff);
