--- a/projects.html
+++ b/projects.html
@@ -14,11 +14,11 @@
 	</header>
 	<div class="txt">
 		<a href="index.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Home</p></button></a>
-		<h1>Here are my projects!</h1>
-		<a href="https://stress-relief-program.theawesomekid02.repl.co/" target="_blank">Stress Relief Program</a><br/><p>This project may not work anymore.</p><br/>
-		<a href="https://Face-Emotion-API.theawesomekid02.repl.co" target="_blank">Face Emotion API</a><br/><p>This project uses your webcam, but it doesn't store any information. Check the source code for proof.</p>
-		<a href="https://donateplz.theawesomekid02.repl.co/" target="_blank">Donation Scam</a><br/><p>This is a scam donation site. Although it doesn't really store your information, please do NOT put real credentials.</p><br/>
-		<a href="https://lmyej.csb.app/" target="_blank">A Skybox</a><br/><p>A 3D scene with a reflective spherical surface in the center.</p><br/><br/>
+		<h1>Here are my projects!</h1><br/><br/>
+		<div class="left_text"><a href="https://stress-relief-program.theawesomekid02.repl.co/" target="_blank">Stress Relief Program</a><br/><p>This project may not work anymore.</p></div><br/>
+		<div class="right_text"><a href="https://Face-Emotion-API.theawesomekid02.repl.co" target="_blank">Face Emotion API</a><br/><p>This project uses your webcam, but it doesn't store any information. Check the source code for proof.</p></div><br/>
+		<div class="left_text"><a href="https://donateplz.theawesomekid02.repl.co/" target="_blank">Donation Scam</a><br/><p>This is a scam donation site. Although it doesn't really store your information, please do NOT put real credentials.</p></div><br/>
+		<div class="right_text"><a href="https://lmyej.csb.app/" target="_blank">A Skybox</a><br/><p>A 3D scene with a reflective spherical surface in the center.</p></div><br/><br/>
 		<h2>Any additional projects can be found on my GitHub or Replit page. Click the icons at the top for more!</h2><br/><br/>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
