--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>All About TheAwesomeKid</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-		<link rel="icon" href="images/person-imitation-small.jpg" />
-  </head>
-  <body>
-			<header>
-			<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="images/github-logo.png" alt="Follow me on GitHub" height="20px" style="border-radius: 50px;"></a>
-			<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="images/replit-logo.png" alt="My replit account" height="20px" style="border-radius: 50px;"></a>
-			<img src="images/discord.png" alt="Discord Logo" height="20px" style="border-radius: 50px; border: none; "><p style="display: inline-block">TheAwesomeKid#7733</p>
-		</header>
-    <div class="txt" align="center">
-			<img src="images/person-imitation-small.jpg" alt="me" id="me"><h1>Hello! I am TheAwesomeKid!</h1>
-			<h2>Here are facts about me.</h2>
-			<div align="left">
-				<ul class="other_txt">
-					<li>My go-to language for simple websites is HTML along with CSS and sometimes JavaScript. For backend development, I mainly use node js, which I am still not perfect at 😥
-					<li>I am working on a huge project using Node JS 🧑‍💻</li>
-					<li>I am also learning Java 🍵</li>
-					<li>I am open to any suggestions for improvement!</li>
-				</ul>
-			</div>
-			<h2>Contact me via the links on top!</h2>
-			<br/>
-			<br/>
-			<a href="projects.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">My other projects</p></button></a>
-			<a href="discord.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Discord Server</p></button></a>
-			<a href="facts-fib.html" class="alt_txt"><button class="new_pg_btn"><p style="color: white;">Two Facts and a Fib</p></button></a><br/><br/><br/><br/><br/>
-			<footer></footer>
-  </body>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>All About TheAwesomeKid</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" href="images/person-imitation-small.jpg" />
+</head>
+
+<body>
+	<header>
+		<a href="https://github.com/TheAwesomeKid02" target="_blank"><img src="images/github-logo.png"
+				alt="Follow me on GitHub" height="20px" style="border-radius: 50px;"></a>
+		<a href="https://replit.com/@TheAwesomeKid02" target="_blank"><img src="images/replit-logo.png"
+				alt="My replit account" height="20px" style="border-radius: 50px;"></a>
+		<img src="images/discord.png" alt="Discord Logo" height="20px" style="border-radius: 50px; border: none; ">
+		<p style="display: inline-block">theawesomekid</p>
+	</header>
+	<div class="txt" align="center">
+		<img src="images/person-imitation-small.jpg" alt="me" id="me">
+		<h1>Hello! I am TheAwesomeKid!</h1>
+		<h2>Here are facts about me.</h2>
+		<div align="left">
+			<ul class="other_txt">
+				<li>My go-to language for simple websites is HTML along with CSS and sometimes JavaScript. For backend
+					development, I mainly use node js, which I am still not perfect at 😥
+				<li>I am working on a huge project using Node JS 🧑‍💻</li>
+				<li>I am also learning Java 🍵</li>
+				<li>I am open to any suggestions for improvement!</li>
+			</ul>
+		</div>
+		<h2>Contact me via the links on top!</h2>
+		<br />
+		<br />
+		<a href="projects.html" class="alt_txt"><button class="new_pg_btn">
+				<p style="color: white;">My other projects</p>
+			</button></a>
+		<a href="discord.html" class="alt_txt"><button class="new_pg_btn">
+				<p style="color: white;">Discord Server</p>
+			</button></a>
+		<a href="facts-fib.html" class="alt_txt"><button class="new_pg_btn">
+				<p style="color: white;">Two Facts and a Fib</p>
+			</button></a><br /><br /><br /><br /><br />
+		<footer></footer>
+</body>
 </html>
