--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<ul class="other_txt">
 				<li>My go-to language for simple websites is HTML along with CSS and sometimes JavaScript. For backend
 					development, I mainly use node js, which I am still not perfect at 😥
-				<li>I am working on a huge project using Node JS 🧑‍💻</li>
+				<li>I am working on a huge project using Python 🧑‍💻</li>
 				<li>I am also learning Java 🍵</li>
 				<li>I am open to any suggestions for improvement!</li>
 			</ul>
